--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "typescript": "^5.4.3",
+    "vite": "^5.2.3"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^7.3.1",
@@ -21,8 +23,6 @@
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "typescript": "^5.4.3",
-    "vite": "^5.2.3"
+    "eslint-plugin-react-refresh": "^0.4.3"
   }
 }
