--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   "dependencies": {
     "husky": "^8.0.3",
     "npm-run-all": "^4.1.5",
+    "react-fontawesome": "^1.7.1",
+    "react-icons": "^5.1.0",
+    "react-router-dom": "^6.22.3",
     "tsx": "^4.7.0",
     "typescript": "^5.1.6"
   },
