--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "husky": "^8.0.3",
+    "node-fetch": "^3.3.2",
     "npm-run-all": "^4.1.5",
     "react-fontawesome": "^1.7.1",
     "react-icons": "^5.1.0",
