--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "deploy": "git push --force origin main:pub"
   },
   "dependencies": {
+    "calculate-correlation": "^1.2.3",
+    "chart.js": "^4.4.2",
     "husky": "^8.0.3",
     "node-fetch": "^3.3.2",
     "npm-run-all": "^4.1.5",
